# Task-2

./: .gitignore  CMakeLists.txt  README.md
backend/include/: Canny.hpp  Hough.hpp  Image.hpp  ImageIO.hpp  Snake.hpp
backend/src/: Canny.cpp  Hough.cpp  Image.cpp  ImageIO.cpp  Snake.cpp
frontend_qt/src/: MainWindow.cpp  MainWindow.hpp  main.cpp  styles.qss
runner/src/: main.cpp
